# matroid-database

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: build-and-test.yml  pypi-publish.yml
src/matroid_database/: __init__.py
src/matroid_database/_all/: allr1n02.txt.xz  allr1n05.txt.xz  allr1n06.txt.xz  allr1n07.txt.xz  allr1n08.txt.xz  allr1n09.txt.xz  allr1n10.txt.xz  allr1n11.txt.xz  allr1n12.txt.xz  allr2n03.txt.xz  allr2n04.txt.xz  allr2n05.txt.xz  allr2n06.txt.xz  allr2n07.txt.xz  allr2n08.txt.xz  allr2n09.txt.xz  allr2n10.txt.xz  allr2n11.txt.xz  allr2n12.txt.xz  allr3n04.txt.xz  allr3n05.txt.xz  allr3n06.txt.xz  allr3n07.txt.xz  allr3n08.txt.xz  allr3n09.txt.xz  allr3n10.txt.xz  allr3n11.txt.xz  allr4n04.txt.xz  allr4n06.txt.xz  allr4n07.txt.xz  allr4n08.txt.xz  allr4n09.txt.xz  n09r04.txt.xz  n09r05.txt.xz  n09r06.txt  n09r07.txt  n10r03.txt.xz  n10r07.txt.xz  n10r08.txt  n11r03.txt.xz  (+3 more)
src/matroid_database/_unorientable/: n09r04.txt.xz  n11r03.txt.xz  unorientabler3n07.txt.xz  unorientabler3n08.txt.xz  unorientabler3n09.txt.xz  unorientabler3n10.txt.xz  unorientabler3n11.txt.xz  unorientabler4n07.txt.xz  unorientabler4n08.txt.xz  unorientabler4n09.txt.xz
