[build-system]
requires = ["setuptools >= 77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matroid-database"
version = "0.3"
description = "Python interface to matroid database"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["mathematics", "combinatorics", "matroids"]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/gmou3/matroid-database"
Documentation = "https://github.com/gmou3/matroid-database/blob/main/README.rst"
Repository = "https://github.com/gmou3/matroid-database.git"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
